<resources>
    <string name="app_name">YTCompanion</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="title_downloads">Downloads</string>
    <string name="title_settings">Settings</string>
    <string name="preferences_theme_title">Dark mode</string>
    <string name="preferences_quality_title">Video quality</string>
    <string name="preferences_extension_title">Default download type</string>
    <string name="fab_bookmark">Add bookmarked video</string>
    <string name="fab_download">Download new video</string>
    <string name="press_to_add_a_new_bookmarked_video">Press # to add a new bookmarked video</string>
    <string name="press_to_download_a_new_video">Press # to download a new video</string>
    <string name="bookmark_dialog_video_title">Title:</string>
    <string name="bookmark_dialog_video_channel">Channel:</string>
    <string name="empty_thumbnail_image">Empty Thumbnail Image</string>
    <string name="thumbnail_image">Thumbnail Image</string>
    <string name="video_link">Video link…</string>
    <string name="confirm">CONFIRM</string>
    <string name="add_new_bookmark">Add new bookmark</string>
    <string name="file_name">File name…</string>
    <string name="download_as">Download as…</string>
    <string name="placeholder">Placeholder</string>
    <string name="extension">Extension…</string>

</resources>