<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:padding="10dp"
    app:cardCornerRadius="16dp"
    android:layout_marginHorizontal="12dp"
    android:layout_marginTop="0dp"
    android:clickable="true"
    android:layout_marginBottom="12dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:paddingLeft="14dp">


        <FrameLayout
            android:id="@+id/thumbnail_holder"
            android:layout_width="98dp"
            android:layout_height="75dp"
            android:background="@drawable/background_add_bookmark_thumbnail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <View
                android:id="@+id/active_thumbnail_border"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_add_bookmark_thumbnail"
                android:backgroundTint="?colorPrimary"
                android:visibility="invisible" />

            <ProgressBar
                android:id="@+id/thumbnailProgressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:indeterminateTint="?dividerColor" />

            <ImageView
                android:id="@+id/placeholder"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_image_24"
                android:visibility="visible"
                app:tint="?dividerColor"
                android:contentDescription="@string/empty_thumbnail_image" />

            <ImageView
                android:id="@+id/thumbnailImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:padding="2dp"
                android:visibility="visible"
                android:contentDescription="@string/thumbnail_image" />
        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/text_holder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            app:layout_constraintStart_toEndOf="@+id/thumbnail_holder"
            app:layout_constraintEnd_toStartOf="@id/download_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:id="@+id/video_title_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/bookmark_dialog_video_title"
            android:textColor="?textFillColor"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/video_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="start|top"
            android:maxLines="2"
            android:text=""
            android:textColor="?textFillColor"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/video_title_title" />

        <TextView
            android:id="@+id/video_channel_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/bookmark_dialog_video_channel"
            android:textColor="?textFillColor"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/video_title" />

        <TextView
            android:id="@+id/video_channel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="start|top"
            android:maxLines="1"
            android:text=""
            android:textColor="?textFillColor"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/video_channel_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/download_button"
            style="@style/Widget.MaterialComponents.Button.IconOnly"
            android:layout_width="54dp"
            android:layout_height="42dp"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="12dp"
            app:icon="@drawable/ic_baseline_download_24"
            app:iconTint="?cardBackgroundColor"
            app:iconSize="16dp"
            app:cornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>