<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="245dp"
    android:background="@drawable/background_sheet">

    <View
        android:id="@+id/clickable_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"/>

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:gravity="center"
        android:layout_marginStart="24dp"
        android:text="@string/download_as"
        android:textSize="20sp"
        android:textColor="?textFillColor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/title_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="64dp"
        android:layout_marginHorizontal="24dp"
        android:background="?dividerColor"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="64dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textViewFilename"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/file_name"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textEditFilename"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:autofillHints="username"
                android:ems="16"
                android:inputType="textUri"
                android:textColor="?textFillColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textViewExtensionsDropdown"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/extension"
            android:focusable="false"
            app:boxBackgroundColor="?android:attr/colorBackgroundFloating"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.45"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintTop_toBottomOf="@id/textViewFilename">

            <AutoCompleteTextView
                android:id="@+id/textEditExtensionsDropdown"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:inputType="none"
                android:textColor="?textFillColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/download_button"
            style="@style/Widget.MaterialComponents.Button.IconOnly"
            android:layout_width="0dp"
            android:layout_height="56dp"
            app:icon="@drawable/ic_baseline_download_24"
            app:iconTint="?cardBackgroundColor"
            app:iconSize="16dp"
            app:cornerRadius="7dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.45"
            app:layout_constraintBottom_toBottomOf="@id/textViewExtensionsDropdown"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>